[aliases]
release = egg_info -Db ''

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 3.0
testpaths = tests

[coverage:run]
branch = True
source =
    flask
    tests

[coverage:paths]
source =
    src/flask
    .tox/*/lib/python*/site-packages/flask
    .tox/pypy/site-packages/flask

[flake8]
# B = bugbear
# E =
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ modules export names
    **/__init__.py: F401
    src/flask/_compat.py: E731, B301, F401
